--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   },
   "dependencies": {
     "express": "3.4.8",
-    "ejs": "*"
+    "ejs": "*",
+    "socket.io": "*",
+    "ntwitter": "*",
+    "passport": "*",
+    "passport-twitter": "*",
+    "connect-ensure-login": "*"
   }
 }
