--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.4.8",
+    "express.io": "*",
     "ejs": "*",
-    "socket.io": "*",
     "ntwitter": "*",
     "passport": "*",
     "passport-twitter": "*",
